--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
-                 Forza Horizin
-    é um jogo em um festival, chamado Festival Horizon que ocorre no estado do Colorado.
+ <!DOCTYPE html>
+ <html lang="pt-br"></html>
+ <head>
+       <meta charset="UTF-8"
+       <title>FORZA Horizon</title>
+      <link rel="stylesheet" href="style.css"
+   </head>
+
+<body
+ 
+ <h1> Forza Horizon </h1>
+ <p> é um jogo em um festival,<em> chamado Festival Horizon que ocorre no estado do Colorado.</em>
 O objetivo é progredir no jogo para obter pulseiras por pilotar depressa, destruir propriedade, 
 vencer corridas de pilotagem, objetivos claros para o desenvolvimento da criança, que constroi
-por meio da interaçao a percepçao futura de mundo do sujeito.
+por meio da interaçao a percepçao futura de mundo do sujeito.</p>
+<p> O objetivo é estourar o maximo de piñatas que puderem com a ajuda de outros jogadores.Ele tambem apresenta
+o <stone> EventLab</stone>, um conjunto de ferramentas no qual os jogadores podem criar jogos personalizados,
+corridas e muito mais, dependendo de suas preferencias pessoais.</p>
+</body>
+</html>
